Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.3.0-beta1
-
None
-
Windows 7 64 bit
-
0fb6e31c20813e564126dc27c0ed434f2f372daf
Description
- Start Creator with clean settings.
- Go to help mode.
You'll see a blank window. - Go back to Welcome mode.
- Click on "Get Started Now".
Creator will switch to Help mode and display "Qt Creator Manual".
Switching to HELP mode should show something useful from the beginning. In Creator 3.2, this worked correctly.
Attachments
For Gerrit Dashboard: QTCREATORBUG-13198 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
97818,1 | Squish: Skip over known bug | 3.3 | qt-creator/qt-creator | Status: ABANDONED | +2 | 0 |
97842,2 | Help: Save home page in Qt Creator settings instead of help collection | 3.3 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |