Help: Save home page in Qt Creator settings instead of help collection

And do not save the default page anywhere at all.
This simplifies the logic, and makes the setting independent of help
engine initialization.

Change-Id: I264903229e274a0bf25c18b33734d36432aa525f
Task-number: QTCREATORBUG-13198
Reviewed-by: Robert Loehning <robert.loehning@digia.com>
Reviewed-by: Eike Ziller <eike.ziller@theqtcompany.com>